# MetroAlarmServerMap

./: .coverage  .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_07_29_1016-9e6f1a7c1e02_initialization.py  2024_08_08_1750-811d2edc2b4d_updated_models.py  2024_09_03_1927-340150a5b8e7_changed_latitude_longitude_to_nullable.py  2024_09_03_1938-22c6152a662e_changed_line_s_logo_path_to_nullable.py  2024_09_04_1316-34aacbe93c0a_neighbours_ids_to_nullable.py  2024_09_06_1920-6fd289ceb115_added_city_id_field_for_line_table.py
api/auth/: Dockerfile
api/stations/: Dockerfile
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docs/schemas/: server_map_bd_schema.drawio
maps/: msk_map.json  spb_map.json
nginx/: Dockerfile  nginx.conf
postgres/: postgresql.conf
scripts/: app.sh  down.sh  start.sh
src/: __main__.py  app.py  catch_exception_middleware.py  city_alias.py  city_stations_map_service.py  database.py
src/application/: __init__.py  map_service.py
src/config/: __init__.py  config.py  database_config.py  logger_config.py
src/entities/: __init__.py  declarative_base.py
src/infrastructure/: __init__.py  app.py  database.py  get_service.py
src/models/: __init__.py  city.py  line.py  station.py  user_favourite_station.py
src/routes/: __init__.py  cities_map_route.py  cities_map_router.py  map_version_router.py  version_router.py
systemd/: metro_alarm_server.service  metro_alarm_server_stations.service  server_metro_alarm.service
(+86 files in other folders)
