[tool.poetry]
name = "metroalarmserverstations"
version = "0.1.0"
description = ""
authors = ["qiisqwww <qiisqwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
fastapi = {extras = ["all"], version = "^0.111.1"}
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
