[tool.poetry]
name = "metroalarmservermap"
version = "0.1.0"
description = "FastAPI server for Metro Alarm application (map microservice)"
authors = ["qiisqwww <qiisqwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
fastapi = {extras = ["all"], version = "^0.115.0"}
loguru = "^0.7.2"
aiohttp = "^3.10.10"


[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
pytest-env = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
